--- a/Aula 2/index.html
+++ b/Aula 2/index.html
@@ -6,6 +6,7 @@
     <title>Aula 2</title>
   </head>
   <body>
+    <img src="1628681668569.jpg" width="50px" />
     <h1>Aula 2 - Listas e Tabela</h1>
     <h2>Listas</h2>
     <p>
